RBAC-cmds.yaml
#create namespace t23
k create ns t23

#create service account api-call
k create sa api-call

# using service account token to authenticate
k run service-list --image alpine/curl:3.14 $do > sapod.yaml -- /bin/sh -c 'curl -H "Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)" https://kubernetes/api/v1/namespaces/default/pods --insecure'

# better example
apiVersion: v1
kind: Pod
metadata:
  name: service-list
  namespace: t23
spec:
  serviceAccountName: api-call
  containers:
  - name: service-list
    image: alpine/curl:3.14
    command: ['sh', '-c', 'while true; do curl -s -k -m 5 -H "Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)" https://kubernetes.default.svc.cluster.local/api/v1/namespaces/default/services; sleep 10; done']

# create clusterrole
k create clusterrole list-svc-clusterrole --verb list --resource services $do > r.yaml

# create clusterrolebinding
k create clusterrolebinding list-svc-clusterrole --clusterrole list-svc-clusterrole --serviceaccount <ns>:api-call $do > r.yaml

# create role (not clusterrole)
k create role list-svc-role --verb list --resource services $do > r.yaml 

# create rolebinding 
k create rolebinding --role list-svc-role --serviceaccount t23:api-call $do >rb.yaml
